objects/Account_Plan_Run__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Copy_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Option__c</fullName>
        <label>Create Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_ID__c</fullName>
        <label>Page ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <label>Run Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starter_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starter Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tab_Name__c</fullName>
        <label>Tab Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <type>Url</type>
    </fields>
    <label>Account Plan Run</label>
</CustomObject>